tests/snapshots/snapshot_integration__dot_polyline__lambda_in_statement.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
graph [splines=polyline];
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int x = 0;"];
D6 [shape=box, label="auto f = [&](int v) {
    if (v > 0) {
      return v;
    }
    return -v;
  };"];
D8 [shape=box, label="x = f(3);"];
D10 [shape=box, label="return x;"];
D4 -> D6;
D6 -> D8;
D8 -> D10;
D10 -> D1;
D0 -> D4;
}
