tests/snapshots/snapshot_integration__dot_polyline__linear_return.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
graph [splines=polyline];
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int a = 1;"];
D6 [shape=box, label="a += 2;"];
D8 [shape=box, label="return a;"];
D4 -> D6;
D6 -> D8;
D8 -> D1;
D0 -> D4;
}
