tests/snapshots/snapshot_integration__dot_polyline__nested_branches.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
graph [splines=polyline];
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int x = 1;"];
D6 [shape=diamond, label="(x > 0)?"];
D11 [shape=diamond, label="(x == 1)?"];
D16 [shape=box, label="x = 10;"];
D20 [shape=box, label="x = 20;"];
D24 [shape=box, label="x = -1;"];
D26 [shape=box, label="return x;"];
D4 -> D6;
D16 -> D26;
D20 -> D26;
D11:s -> D16:n [xlabel=Y];
D11:e -> D20:n [xlabel=N];
D24 -> D26;
D6:s -> D11:n [xlabel=Y];
D6:e -> D24:n [xlabel=N];
D26 -> D1;
D0 -> D4;
}
